# blockgame

./: CMakeLists.txt
cmake/: Findstb_image.cmake
resources/shaders/: basic.frag  basic.vert  withTexture.frag  withTexture.vert
src/: common.h  main.cpp
src/game/: block.cpp  block.h  blockTexture.cpp  blockTexture.h  camera.cpp  camera.h  chunk.cpp  chunk.h  game.cpp  game.h  inputEvent.h  inputState.cpp  inputState.h  player.h  world.cpp  world.h  worldGenerator.cpp  worldGenerator.h
src/gl/: elementBuffer.cpp  elementBuffer.h  shader.cpp  shader.h  texture.cpp  texture.h  vertexArray.cpp  vertexArray.h  vertexBuffer.cpp  vertexBuffer.h  window.cpp  window.h
src/player/: camera.cpp  camera.h  player.cpp  player.h
src/utils/: noiseGenerator.cpp  noiseGenerator.h  vertex.h
